# oop

./: Ability.h  AbilityManager.h  Bombing.h  CMakeLists.txt  DoubleDamage.cpp  DoubleDamage.h  Game.cpp  Game.h  GameField.cpp  GameField.h  Scanner.cpp  Scanner.h  Ship.h  ShipManager.cpp  ShipManager.h
fix_oop/: Makefile  game.txt
fix_oop/include/: Ability.h  AbilityManager.h  AttackOutOfBoundsException.h  Bombardment.h  DoubleDamage.h  Game.h  GameField.h  GameState.h  PairHash.h  Scanner.h  Ship.h  ShipManager.h
fix_oop/src/: AbilityManager.cpp  AttackOutOfBoundsException.cpp  Bombardment.cpp  DoubleDamage.cpp  Game.cpp  GameField.cpp  GameState.cpp  NoAbilitiesException.cpp  Scanner.cpp  Ship.cpp  ShipManager.cpp  ShipPlacementException.cpp
include/: Field.h  Ship.h  ShipManager.h
oop/shipgame/: game
oop/shipgame/include/: GameField.h  Ship.h  ShipManager.h
oop/shipgame/src/: GameField.cpp  ShipManager.cpp  main.cpp
